@@ -14,7 +14,7 @@ triangulationincludedir = $(pkgincludedir)/triangulation
 
 noinst_LTLIBRARIES = libtriangulation.la
 
-libtriangulation_la_SOURCES = cover.cpp crushtri.cpp decompose.cpp homology.cpp homotopy.cpp hydrate.cpp insertlayered.cpp isomorphic.cpp nedge.cpp nexampletriangulation.cpp nface.cpp nfacepair.cpp nhomologicaldata.cpp nisomorphism.cpp ntetrahedron.cpp ntriangulation.cpp nvertex.cpp nxmltrireader.cpp simplify.cpp simplifyglobal.cpp skeleton.cpp subdivide.cpp surfaces.cpp turaevviro.cpp
+libtriangulation_la_SOURCES = cover.cpp crushtri.cpp decompose.cpp homology.cpp homotopy.cpp hydrate.cpp insertlayered.cpp isomorphic.cpp nedge.cpp nexampletriangulation.cpp nface.cpp nfacepair.cpp nhomologicaldata.cpp nisomorphism.cpp ntetrahedron.cpp ntriangulation.cpp nvertex.cpp nxmltrireader.cpp signature.cpp simplify.cpp simplifyglobal.cpp skeleton.cpp subdivide.cpp surfaces.cpp turaevviro.cpp
 
 triangulationinclude_HEADERS = nboundarycomponent.h ncomponent.h nedge.h nexampletriangulation.h nface.h nfacepair.h nhomologicaldata.h nisomorphism.h nperm.h npermit.h ntetface.h ntetrahedron.h ntriangulation.h nvertex.h nxmltrireader.h
 
